--- a/examples/3_parse/config.yaml
+++ b/examples/3_parse/config.yaml
@@ -1,12 +1,12 @@
 # test
  # test
 int : 1 #testcomment
-float:
+float: 3.3
 double:
 bar:
   # other comment
   - bar-foo:
-      foo-int: 10
+      foo-int: 5
       foo-float: 2.64
       foo-double: 2.75
     bar-char: x
@@ -16,10 +16,10 @@ bar:
       - 5
   - bar-foo:
       foo-int: 10
-      foo-float: 5
+      foo-float: 3.4
       foo-double: 2.5
     bar-char: y
     int-arr:
       - 3
       - 9
-      - 11
+      - 10
